[package]
name = "mod-app"
version = "0.1.0"
authors = ["rongfengliang <1141591465@qq.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.39", features = ["derive"] }
serde_json = "1.0.39"
users  = { path = "lib/users" }
app-modmetrics = { path = "lib/modmetrics"}

[workspace]
members = [
    "lib/users",
    "lib/usersmain",
    "lib/libmods",
    "lib/moddemo",
    "lib/modmetrics"
]

